--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <h1 class="message">Yay! আমি জানতাম তুমি YES-ই বলবা! ❤️</h1>
         <p style="font-size: 1.5em; color: white; margin-bottom: 2em;">মৌনতা আমাকে একবার সুযোগ দেও, আমি তোমাকে অনেক আগলে রাখবো। তোমাকে অনেক অনেক ভালোবাসি!</p>
         <img src="https://github.com/sanjidauhin/Valentine/blob/main/022a19f8ad9260b5045e16289e66c903.gif?raw=true" alt="gif" height="240" width="280">
-        <img src="YOUR IMAGE" alt="Cute couple hearts" class="cute-img">
+        <img src="https://github.com/sanjidauhin/Valentine/blob/main/IMG20240907155344.jpg?raw=true" alt="Cute couple hearts" class="cute-img">
         <div class="hearts-celebrate" id="confetti"></div>
     </div>
 
@@ -300,3 +300,4 @@
 </body>
 
 </html>
+
